# hermes

./: .clang-tidy  .eslintignore  .gitattributes  .gitignore  .syncignore  .test262-version  05c5ceb3.3e53d2a4.js  069d4278.4749575a.js  1.5bb8e00e.js  1.9d0c77bf.js  1.aeef6789.js  1.d227c715.js  1.de104ffd.js  1.f1682aef.js  19.06284f57.js  2.445c6c55.js  2.56fee42d.js  2.ace9fa5e.js  2.c7fc56ec.js  2.f66c68d6.js  20.05311455.js  21.45bb6540.js  22.34be0dfd.js  23.6b241167.js  24.60e1225f.js  2abc6a76.cfaef169.js  38ff3c2f.0daa7d98.js  38ff3c2f.57f3fcd6.js  38ff3c2f.74c82a8f.js  38ff3c2f.a34655ac.js  38ff3c2f.ccf80f7b.js  38ff3c2f.e58daaf3.js  404.html  4710e6e257fbab6b.worker.js  4864bce8.f3a17899.js  5ad2d27f.6bdb0ac7.js  5b4207e1.93524eb3.js  5db451f6.51ef2902.js  6.01592670.js  6.1c668e20.js  (+149 more)
API/: CMakeLists.txt
API/hermes/: AsyncDebuggerAPI.cpp  AsyncDebuggerAPI.h  CMakeLists.txt  CompileJS.cpp  CompileJS.h  DebuggerAPI.cpp  DebuggerAPI.h  JNI_OnLoad.cpp  MurmurHash.cpp  MurmurHash.h  RuntimeTaskRunner.cpp  RuntimeTaskRunner.h  SynthTrace.cpp  SynthTrace.h  SynthTraceParser.cpp  SynthTraceParser.h  ThreadSafetyAnalysis.h  TimerStats.cpp  TimerStats.h  TraceInterpreter.cpp  TraceInterpreter.h  TracingRuntime.cpp  TracingRuntime.h  hermes.cpp  hermes.h  hermes_api.h  hermes_napi.cpp  hermes_tracing.cpp  hermes_tracing.h  hermes_tracing_compat.cpp
API/hermes_abi/: CMakeLists.txt  HermesABIHelpers.h  HermesABIRuntime.cpp  HermesABIRuntime.h  HermesABIRuntimeWrapper.cpp  HermesABIRuntimeWrapper.h  README.md  c_compat.c  hermes_abi.cpp  hermes_abi.h  hermes_vtable.cpp  hermes_vtable.h
API/hermes_node_api/: CMakeLists.txt  README.md  hermes_node_api.cpp  hermes_node_api.h
API/hermes_node_api_jsi/: CMakeLists.txt  NodeApiJsiRuntime.cpp
API/hermes_sandbox/: CMakeLists.txt  HermesSandboxRuntime.cpp  HermesSandboxRuntime.h  README.md  hermes_sandbox_impl.cpp
API/hermes_shared/: CMakeLists.txt  hermes_api.cpp  hermes_api.h  js_runtime_api.h
API/node-api/: CMakeLists.txt  js_native_api.h  js_native_api_types.h  js_runtime_api.h
benchmarks/imgui-demo/: CMakeLists.txt  README.md  imdemo-cpp.cpp  register_blob.inc
benchmarks/sqlite-read/: CMakeLists.txt  README.md  sqmock.cpp  sqmock.h  sqread-cpp.cpp  sqread.js
first-party/fbjni/: .gitignore  ApplicationManifest.xml  CMakeLists.txt  CODE_OF_CONDUCT.md  CONTRIBUTING.md  LICENSE  README.md  build.gradle  googletest-CMakeLists.txt.in  gradle.properties  host.gradle  settings.gradle
lib/: CMakeLists.txt  dummy.cpp
lib/ADT/: CMakeLists.txt  CompactArray.cpp
lib/AST/: ASTBuilder.cpp  ASTUtils.cpp  AsyncGenerator.cpp  BlockScopingTransformations.cpp  CMakeLists.txt  CommonJS.cpp  Context.cpp  DeclCollector.cpp  DeclCollector.h  ES6Class.cpp  ESTree.cpp  ESTreeDumper.cpp  ESTreeJSONDumper.cpp  Keywords.cpp  NativeContext.cpp  RecursiveVisitor.h  ScopedFunctionPromoter.cpp  ScopedFunctionPromoter.h  SemContext.cpp  SemResolve.cpp  SemValidate.cpp  SemanticResolver.cpp  SemanticResolver.h  SemanticValidator.cpp  SemanticValidator.h  StripTS.cpp  TS2Flow.cpp  TransformAST.cpp
lib/AST2JS/: AST2JS.cpp  CMakeLists.txt
lib/BCGen/: BCOpt.cpp  BackendContext.cpp  CMakeLists.txt  Exceptions.cpp  LIRPeephole.cpp  LiteralBufferBuilder.cpp  LivenessRegAllocIRPrinter.h  LowerBuiltinCalls.cpp  LowerScopes.cpp  Lowering.cpp  OptEnvironmentInit.cpp  RegAlloc.cpp  SerializedLiteralGenerator.cpp  SerializedLiteralParserBase.cpp
lib/CompilerDriver/: CMakeLists.txt  CompilerDriver.cpp
lib/ConsoleHost/: CMakeLists.txt  ConsoleHost.cpp  MemorySizeParser.cpp  RandomSeedParser.cpp
lib/DependencyExtractor/: CMakeLists.txt  DependencyExtractor.cpp  rust-dependency-extractor.cpp
lib/FlowLib/: 01-array.js  02-string.js  03-map.js  CMakeLists.txt  FlowLib.cpp
lib/FlowParser/: CMakeLists.txt  FlowParser.cpp
lib/FrontEndDefs/: Builtins.cpp  CMakeLists.txt
lib/IR/: Analysis.cpp  CFG.cpp  IR.cpp  IRBuilder.cpp  IREval.cpp  IRHash.cpp  IRUtils.cpp  IRVerifier.cpp  Instrs.cpp
lib/IRGen/: ESTreeIRGen-class.cpp  ESTreeIRGen-except.cpp  ESTreeIRGen-expr.cpp  ESTreeIRGen-func.cpp  ESTreeIRGen-legacy-class.cpp  ESTreeIRGen-stmt.cpp  ESTreeIRGen-typed-class.cpp  ESTreeIRGen-with.cpp  ESTreeIRGen.cpp  ESTreeIRGen.h  IRGen.cpp  IRInstrument.cpp  IRInstrument.h
lib/Inst/: Builtins.cpp  CMakeLists.txt  InstDecode.cpp  InstDecode2.cpp
lib/InternalBytecode/: 01-Promise.js  02-AsyncFn.js  03-ES6Class.js  99-footer.js  Array.js  AsyncFn.js  CMakeLists.txt  InternalBytecode.cpp  Number.js  Promise.js  RegExp.js  String.js  footer.js  header.js  xxd.py
lib/InternalJavaScript/: 00-header.js  01-Promise.js  02-AsyncFn.js  03-ES6Class.js  03-Math.sumPrecise.js  04-AsyncIterator.js  05-IteratorHelperDependencies.js  05-With.js  06-IteratorObject.js  07-IteratorHelperPrototype.js  08-IteratorPrototypeDrop.js  09-IteratorPrototypeEvery.js  10-IteratorPrototypeFilter.js  11-IteratorPrototypeFind.js  12-IteratorPrototypeFlatMap.js  13-IteratorPrototypeForEach.js  14-IteratorPrototypeMap.js  15-IteratorPrototypeReduce.js  16-IteratorPrototypeSome.js  17-IteratorPrototypeTake.js  18-IteratorPrototypeToArray.js  19-IteratorFrom.js  20-MathPrototypeSumPrecise.js  21-IteratorConcat.js  99-footer.js  CMakeLists.txt  InternalBytecode.cpp  README.md  xxd.py
lib/Parser/: CMakeLists.txt  FlowHelpers.cpp  JSLexer.cpp  JSONParser.cpp  JSParser.cpp  JSParserImpl-flow.cpp  JSParserImpl-jsx.cpp  JSParserImpl-ts.cpp  JSParserImpl.cpp  JSParserImpl.h  rust-api.cpp
lib/Platform/: CMakeLists.txt  Logging.cpp
lib/Regex/: CMakeLists.txt  Executor.cpp  RegexParser.cpp  RegexSerialization.cpp
lib/Sema/: ASTEval.cpp  ASTEval.h  ASTLowering.cpp  ASTLowering.h  CMakeLists.txt  CheckImplicitReturn.cpp  DeclCollector.cpp  DeclCollector.h  ESTreeClone.cpp  ESTreeClone.h  FlowChecker-expr.cpp  FlowChecker-scopetypes.cpp  FlowChecker.cpp  FlowChecker.h  FlowContext.cpp  FlowTypesDumper.cpp  FlowTypesDumper.h  Keywords.cpp  ScopedFunctionPromoter.cpp  ScopedFunctionPromoter.h  SemContext.cpp  SemResolve.cpp  (+2 more)
tools/: CMakeLists.txt
unittests/: CMakeLists.txt  lit.cfg
(+8078 files in other folders)
